fix: 컨테이너 삭제 후 인스턴스 재생성하면 리스너 시작되지 않는 문제

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   oracle:
     image: container-registry.oracle.com/database/free:latest
     container_name: oracle26ai
+    hostname: oracle26ai
     ports:
       - "1521:1521"
     environment:
