feat: ONNX 모델 관리 스크립트 및 PDF 벡터화 파이프라인 추가

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
-# Oracle SYS/SYSTEM 비밀번호
+# Oracle SYS/SYSTEM 비밀번호 (docker compose 용도)
 ORACLE_PWD=your_oracle_password
 
-# vctr_user TableSpace 비밀번호
+# Oracle DB 연결 정보 (Oracle SQLPlus 연결 용도)
+ORACLE_HOST=localhost
+ORACLE_PORT=1521
+ORACLE_SERVICE=freepdb1
+ORACLE_USER=vctr_user
 VCTR_USER_PWD=your_vctr_user_password
