--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,9 @@ services:
       - ORACLE_PWD=${ORACLE_PWD}
     volumes:
       - ./oracle-data:/opt/oracle/oradata
-      - ./scripts/setup:/opt/oracle/scripts/setup
-      - ./models:/opt/oracle/models
+      - ./scripts:/opt/oracle/scripts
+      - ./models/onnx:/opt/oracle/models
+      - ./documents:/opt/oracle/documents
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "echo 'SELECT 1 FROM DUAL;' | sqlplus -S sys/${ORACLE_PWD}@//localhost:1521/FREEPDB1 as sysdba | grep -q 1"]
